<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/page_bg">

<!--        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/home_swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvHeader"
                    style="@style/MyCardView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:cardElevation="10dp"
                    app:cardBackgroundColor="@color/header_bg"
                    app:layout_constraintBottom_toTopOf="@+id/clCenter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_weight="0.08"

                    >
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >

                        <ImageView
                            android:id="@+id/wmsLogo"
                            android:layout_width="0dp"
                            android:maxHeight="60dp"
                            android:padding="10dp"
                            android:adjustViewBounds="true"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:src="@drawable/kwms_logo"
                            />

                        <ImageView
                            android:id="@+id/slFastenerLogo"
                            android:layout_width="wrap_content"
                            android:adjustViewBounds="true"
                            android:layout_marginStart="10dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toEndOf="@id/wmsLogo"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:src="@drawable/sl_fastener_logo"
                            />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/logoutBtn"
                            android:layout_width="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_border_blue"
                            app:layout_constraintEnd_toStartOf="@+id/settingBtn"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="10dp"
                                android:src="@drawable/logout"

                                />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/settingBtn"
                            android:layout_width="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/round_border_blue"
                            app:layout_constraintEnd_toStartOf="@+id/tvSupervisor"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="10dp"
                                android:src="@drawable/baseline_settings_24"

                                />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                        <TextView
                            android:id="@+id/tvSupervisor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/tv_sub_head_color"
                            android:text="Supervisor"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:padding="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </com.google.android.material.card.MaterialCardView>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clCenter"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@id/clFooter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cvHeader"
                    app:layout_constraintVertical_weight="0.90">

                    <View
                        android:id="@+id/view1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/clCenterValue"
                        app:layout_constraintHorizontal_weight="0.10"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/clCenterValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/view2"
                        app:layout_constraintHorizontal_weight="0.80"
                        app:layout_constraintStart_toEndOf="@id/view1"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/home_menu_bg"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/midCl1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:clickable="true"
                            android:background="@drawable/card_bg_color"
                            app:layout_constraintBottom_toTopOf="@+id/midCl2"
                            app:layout_constraintEnd_toStartOf="@+id/midCl3"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:id="@+id/ivGRN"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/grn"
                                android:padding="5dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                />

                            <TextView
                                android:id="@+id/tvGRN"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tv_grn"
                                android:padding="5dp"
                                android:textStyle="bold"
                                android:textColor="@color/tv_sub_head_color"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/ivGRN" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout

                            android:id="@+id/midCl2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:clickable="true"
                            android:background="@drawable/card_bg_color"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/midCl4"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/midCl1">

                            <ImageView
                                android:id="@+id/ivRePrintBarcode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:src="@drawable/reprint_barcode"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"

                                />

                            <TextView
                                android:id="@+id/tvRePrintBarcode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/re_print_barcode"
                                android:textStyle="bold"
                                android:padding="5dp"
                                android:textColor="@color/tv_sub_head_color"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/ivRePrintBarcode" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/midCl3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:clickable="true"
                            android:background="@drawable/card_bg_color"
                            app:layout_constraintBottom_toTopOf="@+id/midCl4"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/midCl1"
                            app:layout_constraintTop_toTopOf="parent"

                            >

                            <ImageView
                                android:id="@+id/ivDemo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/my_transaction"
                                android:padding="5dp"
                                android:visibility="visible"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"

                                />

                            <TextView
                                android:id="@+id/tvDemo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/goods_receipt"
                                android:padding="5dp"
                                android:textStyle="bold"
                                android:textColor="@color/tv_sub_head_color"
                                android:visibility="visible"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/ivDemo" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/midCl4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:visibility="invisible"
                            android:clickable="true"
                            android:background="@drawable/card_bg_color"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/midCl2"
                            app:layout_constraintTop_toBottomOf="@+id/midCl3"

                            >

                            <ImageView
                                android:id="@+id/ivMyTransaction"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/grn"
                                android:padding="5dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"

                                />

                            <TextView
                                android:id="@+id/tvMyTransaction"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/my_transaction"
                                android:textStyle="bold"
                                android:padding="5dp"
                                android:textColor="@color/tv_sub_head_color"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/ivMyTransaction" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:id="@+id/view2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="0.10"
                        app:layout_constraintStart_toEndOf="@id/clCenterValue"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clFooter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_weight="0.02">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bottom_left"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

       <!-- </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
